to fix tommorow: header styles, home ref and useVisible hook

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -22,3 +22,9 @@
 body {
   overflow-x: hidden;
 }
+
+@layer utilities {
+  .backdrop-blur-10 {
+    backdrop-filter: blur(10px);
+  }
+}
